# ouroboros

./: .dockerignore  .env.example  .env.prod.example  .env.test.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  LINEAR.md  README.md  compose.yaml  index.html  knowledge-index.md  knowledge-log.md  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
.agents/: AGENTS.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  state.rs  storage.rs  workspace.rs
src-tauri/src/application/: mod.rs  mutations.rs  queries.rs
src-tauri/src/commands/: mutations.rs  queries.rs
src-tauri/src/models/: dashboard.rs  states.rs  workspace.rs
src-tauri/src/runtime/: adapters.rs  evaluation.rs  mod.rs
src-tauri/src/state/: mutations.rs  queries.rs
src-tauri/src/workspace/: bootstrap.rs  catalog.rs  contracts.rs  helpers.rs  lifecycle.rs  mutations.rs  operations.rs  paths.rs  policies.rs  query.rs  tests.rs
src-tauri/src/workspace/bootstrap/: assemble.rs  exports.rs
src-tauri/src/workspace/catalog/: backlinks.rs  build.rs
src-tauri/src/workspace/lifecycle/: prepare.rs  snapshots.rs
src-tauri/src/workspace/mutations/: evaluations.rs  exports.rs  imports.rs  live.rs  sources.rs
src-tauri/src/workspace/operations/: audit.rs  diff.rs  imports.rs
src-tauri/src/workspace/policies/: exports.rs  imports.rs  live.rs
src-tauri/src/workspace/query/: blobs.rs  checkpoints.rs  collections.rs  documents.rs  evaluations.rs  imports.rs  operations.rs  search.rs
(+1326 files in other folders)
