[package]
name = "autokairos-desktop"
version = "0.1.0"
description = "AutoKairos desktop shell"
authors = ["orange-fox-ai"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
